flux/infrastructure/media/prowlarr/ingress.yaml
# Auto-split from cluster files
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr
  namespace: media
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: identity-prowlarr-role-chain@kubernetescrd
spec:
  tls:
  - hosts:
    - prowlarr.becklab.cloud
    secretName: prowlarr-tls
  rules:
  - host: prowlarr.becklab.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prowlarr
            port:
              number: 9696
