flux/infrastructure/media/prowlarr/prowlarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  namespace: media
  labels:
    app: prowlarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      nodeSelector:
        kubernetes.io/hostname: ip-192-168-100-11
      securityContext:
        fsGroup: 1000
      containers:
        - name: prowlarr
          image: lscr.io/linuxserver/prowlarr:latest
          resources:
            limits:
              cpu: "1"
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 256Mi
          ports:
            - containerPort: 9696
              name: http
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: prowlarr-config
---
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: media
spec:
  selector:
    app: prowlarr
  ports:
    - name: http
      port: 9696
      targetPort: 9696
      protocol: TCP
  type: ClusterIP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prowlarr
  namespace: media
  labels:
    app: prowlarr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prowlarr.becklab.cloud`)
      kind: Rule
      services:
        - name: prowlarr
          port: 9696
      middlewares:
        - name: sso-admin-chain
          namespace: identity
  tls:
    secretName: prowlarr-tls
